# JavaR

./: .gitignore  BANNER.md  README.md
.github/workflows/: build.yml
.metals/: metals.lock.db  metals.mv.db
javar-project/: .gitignore  Cargo.toml  README.md
javar-project/javar-agent/: pom.xml
javar-project/javar-agent/src/main/java/com/javar/agent/: AgentRegistry.java  AgentSocketServer.java  ClassRedefiner.java  JavaRAgent.java  StructuralClassLoader.java  TelemetryReporter.java
javar-project/javar-agent/src/main/java/com/javar/agent/managed/: FieldLayout.java  JavaRManaged.java  JavaRManagedRuntime.java  ManagedClassTransformer.java  package-info.java
javar-project/javar-agent/src/main/java/com/javar/agent/memory/: JniOffHeapBridge.java  NativeLibraryLoader.java  NoopOffHeapBridge.java  OffHeapBridge.java  OffHeapBridgeFactory.java  package-info.java
javar-project/javar-agent/src/main/java/com/javar/agent/shadow/: ClassRenamer.java  JavaRDispatcher.java  ShadowClassManager.java
javar-project/javar-agent/src/main/java22/com/javar/agent/memory/: PanamaOffHeapBridge.java
javar-project/javar-cli/: Cargo.toml  build.rs
javar-project/javar-cli/src/: embed.rs  global_mode.rs  layout_fix.rs  main.rs  maven.rs  setup.rs  smart_build.rs  smart_run.rs  style.rs  tools_cmd.rs  version_sync.rs  workspace_inject.rs
javar-project/javar-cli/src/dashboard/: agent.rs  app.rs  discover.rs  java_proc.rs  mod.rs  ui.rs  watcher_svc.rs
javar-project/javar-core/: Cargo.toml
javar-project/javar-core/include/: javar_mem.h
javar-project/javar-core/src/: agent_resolve.rs  compiler.rs  lib.rs  main.rs  protocol.rs  rollback.rs  shadow.rs  watcher.rs
javar-project/javar-core/src/bridge/: mod.rs  socket.rs
javar-project/javar-core/src/classfile/: mod.rs
javar-project/javar-core/src/memory/: ffi.rs  jni_api.rs  mod.rs
javar-project/javar-vscode/: package.json
javar-project/javar-vscode/src/: client.ts  extension.ts  telemetryView.ts
javar-project/scripts/: install.ps1  install.sh
scripts/: install.ps1  install.sh
vscode-javar/: .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  javar-0.1.0.vsix  javar-0.1.1.vsix  javar-0.1.2.vsix  javar-0.1.3.vsix  javar-0.1.4.vsix  package-lock.json  package.json
vscode-javar/src/: ensureCli.ts  extension.ts  workspaceInject.ts
