[workspace]
resolver = "2"
members = [
    "javar-core",
    "javar-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/rabbittrix/javar"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
jni = "0.21"
notify = "6"
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
which = "6"
