[package]
name = "javar-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JavaR CLI — init, run, status, and Control Center TUI"

[[bin]]
name = "javar"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
javar-core = { path = "../javar-core" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
which.workspace = true
